tests/files/type_checker_tests/should_fail/223.cmdr
//Should not be able to use function variable inappropriately
println sin;